fixtures/valid/simple-transform/input.js
translator.trans('KEY THAT DOES NOT EXIST');
translator.trans('KEY THAT \'DOES\' NOT EXIST');
translator.trans("KEY THAT DOES NOT EXIST");
translator.trans("KEY THAT \"DOES\" NOT EXIST");
