fixtures/invalid/transform-wrong-binary-expression/input.js
translator.trans(a);
translator.trans('Other ' + b);
translator.trans(tes.t);

